--- a/CustomMacroBase/CustomControlEx/ScrollViewerEx/cScrollViewer_style.xaml
+++ b/CustomMacroBase/CustomControlEx/ScrollViewerEx/cScrollViewer_style.xaml
@@ -100,6 +100,7 @@
 
     <!--ScrollViewerStyle-->
     <Style TargetType="{x:Type local:cScrollViewer}">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:cScrollViewer}">
