--- a/CustomMacroBase/CustomControlEx/VerticalRadioButtonEx/cVerticalRadioButton_style.xaml
+++ b/CustomMacroBase/CustomControlEx/VerticalRadioButtonEx/cVerticalRadioButton_style.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CustomMacroBase.CustomControlEx.VerticalRadioButtonEx" 
-                    xmlns:effect="clr-namespace:CustomMacroBase.CustomEffect">
+                    xmlns:effect="clr-namespace:CustomMacroBase.CustomEffect" 
+                    xmlns:colorfultextblockex="clr-namespace:CustomMacroBase.CustomControlEx.ColorfulTextBlockEx">
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-    <local:cVerticalRadioButton_converter_doublenullcheck x:Key="cVerticalRadioButton_converter_doublenullcheck"/>
-    <local:cVerticalRadioButton_converter_boolbool2visibility x:Key="cVerticalRadioButton_converter_boolbool2visibility"/>
+    <local:cVerticalRadioButton_converter_mix2colorfultextvisibility x:Key="cVerticalRadioButton_converter_mix2colorfultextvisibility"/>
 
     <SolidColorBrush x:Key="RadioButton.Static.Background" Color="#FFFFFFFF"/>
     <SolidColorBrush x:Key="RadioButton.Static.Border" Color="#FF707070"/>
@@ -67,79 +67,25 @@
                               VerticalAlignment="Stretch"
                               Opacity="1.0"
                               Background="Transparent">
-                            <TextBlock Margin="5,0,5,0" x:Name="radioButtonNormalText" Text="{TemplateBinding Text}" HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="Visible"/>
+                            <TextBlock x:Name="radioButtonNormalText" 
+                                       Text="{TemplateBinding Text}"
+                                       HorizontalAlignment="Left" 
+                                       VerticalAlignment="Center"
+                                       Margin="5,0,5,0" />
                             <!--<ContentPresenter x:Name="contentPresenter" Focusable="False" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" HorizontalAlignment="Left" VerticalAlignment="Center" />-->
                         </Grid>
                         <Grid x:Name="radioButtonColorfulTextBody" Grid.ColumnSpan="2" Visibility="{TemplateBinding EnableColorfulText, Converter={StaticResource BooleanToVisibilityConverter}}">
-                            <Border>
-                                <Border.Visibility>
-                                    <MultiBinding Converter="{StaticResource cVerticalRadioButton_converter_boolbool2visibility}" Mode="OneWay">
-                                        <Binding Path="EnableColorfulText" RelativeSource="{RelativeSource AncestorType={x:Type local:cVerticalRadioButton},Mode=FindAncestor}"/>
-                                        <Binding Path="IsChecked" RelativeSource="{RelativeSource AncestorType={x:Type local:cVerticalRadioButton},Mode=FindAncestor}"/>
+                            <colorfultextblockex:cColorfulTextBlock Text="{Binding Text, ElementName=radioButtonNormalText}" 
+                                                                    TextMargin="{Binding Margin, ElementName=radioButtonNormalText}"
+                                                                    TextHorizontalAlignment="{Binding HorizontalAlignment, ElementName=radioButtonNormalText}"
+                                                                    TextVerticalAlignment="{Binding VerticalAlignment, ElementName=radioButtonNormalText}">
+                                <UIElement.Visibility>
+                                    <MultiBinding Converter="{StaticResource cVerticalRadioButton_converter_mix2colorfultextvisibility}">
+                                        <Binding Path="EnableColorfulText" RelativeSource="{RelativeSource TemplatedParent}"/>
+                                        <Binding Path="IsChecked" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     </MultiBinding>
-                                </Border.Visibility>
-                                <Border.Style>
-                                    <Style TargetType="{x:Type Border}">
-                                        <Style.Triggers>
-                                            <Trigger Property="Visibility" Value="Visible">
-                                                <Trigger.Setters>
-                                                    <Setter Property="Background">
-                                                        <Setter.Value>
-                                                            <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
-                                                                <GradientStop Offset="1.000" Color="#009fd9" />
-                                                                <GradientStop Offset="0.834" Color="#65b849" />
-                                                                <GradientStop Offset="0.667" Color="#f7b423" />
-                                                                <GradientStop Offset="0.500" Color="#f58122" />
-                                                                <GradientStop Offset="0.334" Color="#de3a3c" />
-                                                                <GradientStop Offset="0.137" Color="#943f96" />
-                                                                <GradientStop Offset="0.000" Color="#009fd9" />
-                                                            </LinearGradientBrush>
-                                                        </Setter.Value>
-                                                    </Setter>
-                                                    <Setter Property="Effect">
-                                                        <Setter.Value>
-                                                            <effect:TranslationalEffect Threshold="0.75" HorizontalOffset ="0" VerticalOffset="0"/>
-                                                        </Setter.Value>
-                                                    </Setter>
-                                                </Trigger.Setters>
-                                                
-                                                <Trigger.EnterActions>
-                                                    <BeginStoryboard Name="Anm">
-                                                        <Storyboard>
-                                                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Effect.HorizontalOffset" 
-                                                                                           Duration="0:0:5" 
-                                                                                           AutoReverse="False" 
-                                                                                           RepeatBehavior="Forever">
-                                                                <LinearDoubleKeyFrame KeyTime="0:0:0" Value="1"/>
-                                                                <LinearDoubleKeyFrame KeyTime="0:0:5" Value="0"/>
-                                                            </DoubleAnimationUsingKeyFrames>
-                                                        </Storyboard>
-                                                    </BeginStoryboard>
-                                                </Trigger.EnterActions>
-                                                <Trigger.ExitActions>
-                                                    <RemoveStoryboard BeginStoryboardName="Anm"></RemoveStoryboard>
-                                                </Trigger.ExitActions>
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Border.Style>
-                            </Border>
-
-                            <Grid.OpacityMask>
-                                <!--<VisualBrush Stretch="None" Visual="{Binding ElementName=radioButtonBody}"/>-->
-                                <VisualBrush Stretch="None">
-                                    <VisualBrush.Visual>
-                                        <Border Width="{Binding ActualWidth, ElementName=radioButtonNormalTextBody, Converter={StaticResource cVerticalRadioButton_converter_doublenullcheck}, Mode=OneWay}"
-                                                Height="{Binding ActualHeight, ElementName=radioButtonNormalTextBody, Converter={StaticResource cVerticalRadioButton_converter_doublenullcheck}, Mode=OneWay}"
-                                                Background="Transparent">
-                                            <TextBlock Margin="5,0,5,0" Text="{TemplateBinding Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                                        </Border>
-                                    </VisualBrush.Visual>
-                                </VisualBrush>
-                            </Grid.OpacityMask>
-                            <Grid.Effect>
-                                <DropShadowEffect x:Name="BodyEffect" ShadowDepth="1" BlurRadius="1" Color="Black"/>
-                            </Grid.Effect>
+                                </UIElement.Visibility>
+                            </colorfultextblockex:cColorfulTextBlock>
                         </Grid>
 
                         <Border x:Name="radioButtonHeader" Grid.Column="0" Width="2" Background="DarkGray" Opacity="1" Visibility="Hidden">
