--- a/CustomMacroBase/Themes/Generic.xaml
+++ b/CustomMacroBase/Themes/Generic.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ColorfulTextBlockEx/cColorfulTextBlock_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ComboBoxEx/cComboBox_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ConsoleListBoxEx/cConsoleListBox_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ContextMenuEx/cContextMenu_cMenuItem_style.xaml"/>
