--- a/DS4Windows/DS4Forms/Themes/DefaultTheme.xaml
+++ b/DS4Windows/DS4Forms/Themes/DefaultTheme.xaml
@@ -1,6 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:DS4WinWPF.DS4Forms.Themes" xmlns:system="clr-namespace:System;assembly=mscorlib">
+                    xmlns:local="clr-namespace:DS4WinWPF.DS4Forms.Themes"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/DS4WinWPF.UI;component/Themes/CustomThemeLight.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+
     <!-- Brushes -->
     <SolidColorBrush x:Key="ForegroundColor" Color="{x:Static SystemColors.ActiveCaptionTextColor}" />
     <SolidColorBrush x:Key="SecondaryColor" Color="{x:Static SystemColors.ControlColor}"  />
