--- a/DS4Windows.UI/Control/CustomControlEx/PathButtonEx/cPathButton_style.xaml
+++ b/DS4Windows.UI/Control/CustomControlEx/PathButtonEx/cPathButton_style.xaml
@@ -75,6 +75,9 @@
                                 </BeginStoryboard>
                             </Trigger.ExitActions>
                         </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Opacity" Value="0.5" TargetName="realBackground"/>
+                        </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" Value="0.35"/>
                         </Trigger>
