--- a/DS4Windows.UI/Control/CustomStyleEx/ContextMenuEx/cContextMenu_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/ContextMenuEx/cContextMenu_style.xaml
@@ -1,26 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
+    <!-- Brushes -->
+    <SolidColorBrush x:Key="SecondaryColor" Color="#FF2d5a8c" />
+
     <!--MenuItem-->
     <Style x:Key="MenuItemStyle" TargetType="{x:Type MenuItem}">
-        <Style.Resources>
-            <Style x:Key="{x:Static MenuItem.SeparatorStyleKey}" TargetType="{x:Type Separator}">
-                <Setter Property="Background" Value="{StaticResource SecondaryColor}" />
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Separator}">
-                            <Border
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        Background="{TemplateBinding Background}"
-                        Height="1"
-                        SnapsToDevicePixels="True" />
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </Style.Resources>
-        
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="StaysOpenOnClick" Value="True"/>
         <Setter Property="Template">
@@ -39,16 +24,38 @@
                             <Setter Property="Opacity" Value="0.75" TargetName="background"/>
                             <Setter Property="Background" Value="Crimson" TargetName="background"/>
                         </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-
+    
+    <!--MenuItem.SeparatorStyleKey-->
+    <Style x:Key="SeparatorStyleKeyStyle" TargetType="{x:Type Separator}">
+        <Setter Property="Background" Value="{StaticResource SecondaryColor}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Separator}">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    Background="{TemplateBinding Background}"
+                                    Height="2"
+                                    SnapsToDevicePixels="True"
+                                    Margin="0,2,0,2"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     <!--ContextMenu-->
     <Style x:Key="cContextMenuStyle" TargetType="{x:Type ContextMenu}">
         <Style.Resources>
             <Style TargetType="{x:Type MenuItem}" BasedOn="{StaticResource MenuItemStyle}"/>
+            <Style TargetType="{x:Type Separator}" BasedOn="{StaticResource SeparatorStyleKeyStyle}"
+                   x:Key="{x:Static MenuItem.SeparatorStyleKey}" />
         </Style.Resources>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
