--- a/DS4Windows.UI/Control/CustomStyleEx/ListBoxEx/cListBox_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/ListBoxEx/cListBox_style.xaml
@@ -7,11 +7,42 @@
     <SolidColorBrush x:Key="ForegroundColor" Color="White" />
     <SolidColorBrush x:Key="SecondaryColor" Color="#FF2d5a8c" />
     <SolidColorBrush x:Key="AccentColor" Color="#FF007ACC" />
-    
 
+    <!--ListBoxItem-->
+    <Style x:Key="cListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="FontSize" Value="13" />
+        <Setter Property="Padding" Value="2,0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                    <Grid>
+                        <Border x:Name="innerBorder" 
+                                Background="{TemplateBinding Background}" 
+                                Padding="{TemplateBinding Padding}" 
+                                CornerRadius="1.5"
+                                SnapsToDevicePixels="true">
+                            <ContentPresenter Margin="2"/>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter TargetName="innerBorder" Property="Background" Value="{StaticResource SecondaryColor}"/>
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter TargetName="innerBorder" Property="Background" Value="{StaticResource AccentColor}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <!-- ListBox Style -->
     <Style x:Key="cListBoxStyle" TargetType="{x:Type ListBox}">
+        <Style.Resources>
+            <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource cListBoxItemStyle}"/>
+        </Style.Resources>
         <Setter Property="Background" Value="{StaticResource BackgroundColor}" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundColor}" />
         <Setter Property="BorderBrush" Value="{StaticResource BorderColor}" />
