--- a/DS4Windows.UI/Control/CustomStyleEx/TextBoxEx/cTextBox_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/TextBoxEx/cTextBox_style.xaml
@@ -17,7 +17,7 @@
                     <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True"
                             CornerRadius="2.5">
                         <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"
-                                      VerticalAlignment="Center"/>
+                                      VerticalAlignment="Center" Margin="2"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
