--- a/DS4Windows/DS4Forms/AutoProfiles.xaml
+++ b/DS4Windows/DS4Forms/AutoProfiles.xaml
@@ -207,7 +207,8 @@
 
                     <CheckBox Content="{lex:Loc TurnOffDS4WindowsTemporarily}" Margin="{StaticResource spaceMargin}"
                           IsChecked="{Binding Turnoff}" />
-                        <TextBox Text="{Binding Path}" Margin="{StaticResource spaceMargin}" ToolTip="{lex:Loc AutoProfPathTip}"/>
+                        <TextBox Text="{Binding Path}" Margin="{StaticResource spaceMargin}" ToolTip="{lex:Loc AutoProfPathTip}"
+                                 MaxWidth="320"/>
 
                         <Grid>
                             <TextBox x:Name="mainTxtBox" Text="{Binding Title, UpdateSourceTrigger=LostFocus}" Margin="{StaticResource spaceMargin}" ToolTip="{lex:Loc AutoProfTitleTip}" />
@@ -264,8 +265,8 @@
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
-                                        <CheckBox IsChecked="{Binding Exists,Mode=OneWay}" IsEnabled="False" Margin="0,10,0,0" />
-                                        <Image Source="{Binding Exeicon}" Width="30" Margin="0,0,10,0" />
+                                        <CheckBox IsChecked="{Binding Exists,Mode=OneWay}" IsEnabled="False" VerticalAlignment="Center"/>
+                                        <Image Source="{Binding Exeicon}" Width="30" Margin="10,0,10,0" />
                                         <TextBlock Text="{Binding Filename}" />
                                     </StackPanel>
                                 </DataTemplate>
