--- a/DS4Windows/DS4Forms/Themes/DarkTheme.xaml
+++ b/DS4Windows/DS4Forms/Themes/DarkTheme.xaml
@@ -145,7 +145,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type xctk:SplitButton}">
                     <Grid x:Name="MainGrid" SnapsToDevicePixels="True">
-                        <xctk:ButtonChrome x:Name="ControlChrome" Background="{TemplateBinding Background}" BorderThickness="0" RenderEnabled="{TemplateBinding IsEnabled}">
+                        <xctk:ButtonChrome x:Name="ControlChrome" Background="{TemplateBinding Background}" BorderThickness="0" RenderEnabled="{TemplateBinding IsEnabled}"
+                                           CornerRadius="2.5">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
@@ -158,7 +159,8 @@
                                         </ControlTemplate>
                                     </Button.Template>
                                     <Grid>
-                                        <xctk:ButtonChrome x:Name="ActionButtonChrome" Background="{TemplateBinding Background}" BorderThickness="{Binding BorderThickness, Converter={StaticResource ThicknessSideRemovalConverter}, ConverterParameter=2, RelativeSource={RelativeSource TemplatedParent}}" BorderBrush="{TemplateBinding BorderBrush}" Foreground="{TemplateBinding Foreground}" RenderEnabled="{TemplateBinding IsEnabled}" RenderMouseOver="{Binding IsMouseOver, ElementName=PART_ActionButton}" RenderPressed="{Binding IsPressed, ElementName=PART_ActionButton}">
+                                        <xctk:ButtonChrome x:Name="ActionButtonChrome" Background="{TemplateBinding Background}" BorderThickness="{Binding BorderThickness, Converter={StaticResource ThicknessSideRemovalConverter}, ConverterParameter=2, RelativeSource={RelativeSource TemplatedParent}}" BorderBrush="{TemplateBinding BorderBrush}" Foreground="{TemplateBinding Foreground}" RenderEnabled="{TemplateBinding IsEnabled}" RenderMouseOver="{Binding IsMouseOver, ElementName=PART_ActionButton}" RenderPressed="{Binding IsPressed, ElementName=PART_ActionButton}"
+                                                           CornerRadius="2.5,0,0,2.5">
                                             <ContentPresenter x:Name="ActionButtonContent" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="true" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                                         </xctk:ButtonChrome>
                                     </Grid>
@@ -170,7 +172,8 @@
                                         </ControlTemplate>
                                     </ToggleButton.Template>
                                     <Grid>
-                                        <xctk:ButtonChrome x:Name="ToggleButtonChrome" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Padding="1,0,1,0" RenderEnabled="{TemplateBinding IsEnabled}" RenderMouseOver="{Binding IsMouseOver, ElementName=PART_ToggleButton}" RenderPressed="{Binding IsPressed, ElementName=PART_ToggleButton}" RenderChecked="{TemplateBinding IsOpen}">
+                                        <xctk:ButtonChrome x:Name="ToggleButtonChrome" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Padding="1,0,1,0" RenderEnabled="{TemplateBinding IsEnabled}" RenderMouseOver="{Binding IsMouseOver, ElementName=PART_ToggleButton}" RenderPressed="{Binding IsPressed, ElementName=PART_ToggleButton}" RenderChecked="{TemplateBinding IsOpen}"
+                                                           CornerRadius="0,2.5,2.5,0">
                                             <Grid x:Name="arrowGlyph" IsHitTestVisible="False" Margin="4,3,4,3">
                                                 <Path x:Name="Arrow" Data="{StaticResource DownArrowGeometry}" Fill="{StaticResource ForegroundColor}" 
                                                       HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0"/>
